# ChangeLog for app-emulation/emul-linux-x86-compat
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-compat/ChangeLog,v 1.32 2009/09/23 15:32:55 patrick Exp $

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  emul-linux-x86-compat-1.0-r1.ebuild:
  Remove virtual/libc

  10 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  emul-linux-x86-compat-20071125-r1.ebuild,
  emul-linux-x86-compat-20081109.ebuild:
  Set QA_DT_HASH.

*emul-linux-x86-compat-20081109 (10 Nov 2008)

  10 Nov 2008; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-compat-20081109.ebuild:
  package bump

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing kugelfang from metadata.xml as per #46972.

  08 Dec 2007; Mike Doty <kingtaco@gentoo.org>
  emul-linux-x86-compat-20071125-r1.ebuild:
  wfm

*emul-linux-x86-compat-20071125-r1 (08 Dec 2007)

  08 Dec 2007; Mike Doty <kingtaco@gentoo.org> +files/99libstdc++32,
  +emul-linux-x86-compat-20071125-r1.ebuild:
  add env.d for libstdc++-v3, bug 200213

  28 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  emul-linux-x86-compat-20071125.ebuild:
  Stable on amd64.

*emul-linux-x86-compat-20071125 (25 Nov 2007)

  25 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-compat-20071125.ebuild:
  fixes bug 200213

  24 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  emul-linux-x86-compat-20071114-r1.ebuild:
  amd64 stable for releng

*emul-linux-x86-compat-20071114-r1 (15 Nov 2007)

  15 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-compat-20071114-r1.ebuild:
  fixed libstdc++.so.5 symlink, bug 199161

  14 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  emul-linux-x86-compat-20071114.ebuild:
  removing bogus blocker on sys-devel/gcc

*emul-linux-x86-compat-20071114 (14 Nov 2007)

  14 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-compat-20071114.ebuild: