@@ -2,7 +2,9 @@ AUX 75emul-linux-x86-compat 51 RMD160 1c52b6d125a8ee61fb909a085a8c935096e2bcb4 S
 AUX 99libstdc++32 34 RMD160 5357c6039ceec5ddf496542db600d64cd2ea06f1 SHA1 c4a7638bc1b1d19c39aa0f6f50e12f85e3e638ad SHA256 cf43e5c437f26af784a9d0c4d81b030b596ed70863db6680d8d035c617944be7
 DIST emul-linux-x86-compat-20071125.tar.bz2 997494 RMD160 647ff718ab343137a50f2479b1f9e37d5e360979 SHA1 1a569b821b98577f81c739486940158e8c89e491 SHA256 6e7d57a6370a8f3b3385ddc4c711b0cebcd56d31d9b0ba9284e7987df6fa985e
 DIST emul-linux-x86-compat-20081109.tar.bz2 970275 RMD160 8c3c2cd42460350eedeadf2047e5cca3efae476e SHA1 4f0439079cf9fdaed888a4098f7309a6a464b631 SHA256 b343269148353af1d47370f2dbaec01366515c7d4441fcb888eecc90b4d45399
+DIST emul-linux-x86-compat-20091004_rc1.tar.bz2 944706 RMD160 46b7db06971cffa8ec35e995c53c758c4ea744b9 SHA1 ae3511d5d50ba26a25910196912b6f0dad12787b SHA256 c7e312b31310507b6f61af23b6ca0fda597ce3d404a351b0fff0d3610a377859
 EBUILD emul-linux-x86-compat-20071125-r1.ebuild 838 RMD160 1d0903b187c4407fb60e06af1eee0e058716075c SHA1 3fbcde2f0a644db3ff9e4863370e1c9debdf2128 SHA256 1f117a47a6d8d82a748485f277e337c96246eec60657222d6178552d8ad91773
 EBUILD emul-linux-x86-compat-20081109.ebuild 835 RMD160 85850b2df702e51be981e0b9f6ce3897bdde7f8b SHA1 dbdde93dfe70a736788fe0345bd092ca7ed3ce16 SHA256 1099e6c59920caa7723b7a9717f1b26b90342a54c415f3bf908b2de62557df36
-MISC ChangeLog 5118 RMD160 18afccf6297a8a221a0245483b3eeeb13602da79 SHA1 2f307b48b15ca3533607aae115bacb6bdf850f12 SHA256 c8461b19d13a9511ba42b2f71807e611d145e13868e13a5b82d3133bbc0efd94
+EBUILD emul-linux-x86-compat-20091004_rc1.ebuild 777 RMD160 494259724007e66e5ea6f5956d23fc835a5993a9 SHA1 e4157201c58f352fee1bc1c01d1f992c32bb70d2 SHA256 edbe8456a76f6a6ce0a9b33c8272bdaef9f57148b6ad97c3b5798e8ffb65f69a
+MISC ChangeLog 5278 RMD160 20e5753c2ac07e42f035950354adea3826fe5f13 SHA1 638548bfc28ff7f31e6a9b9fb6a49a83235bc257 SHA256 7bc6f270dc1370d8714ee5c82a11a69d42b2222832c186569b4728d2d63c4042
 MISC metadata.xml 159 RMD160 d52f9d709e07e1eca289e2940d4292c64fda6029 SHA1 021f81ae2e25595444e199cc4be3c122d37da802 SHA256 38c5ab0a3cf60ec0611d1112056b9ff16183715db2c60a2ac84590da0ce7fb76
